--- a/style2.css
+++ b/style2.css
@@ -113,10 +113,10 @@ nav a:hover
 
 #banner_image
 {
-    margin-top: 15px;
-    height: 200px;
-    border-radius: 5px;
-    background: url('images/sanfrancisco.jpg') no-repeat;
+    margin-top: 20px;
+    height: 186px;
+    
+    
     position: relative;
     box-shadow: 0px 4px 4px #1c1a19;
     margin-bottom: 25px;
@@ -137,27 +137,70 @@ nav a:hover
     font-size: 0.8em;
 }
 
-.red_button
-{
-    display: inline-block;
-    height: 25px;
-    position: absolute;
-    right: 5px;
-    bottom: 5px;
-    background: url('images/red_background.png') repeat-x;
-    border: 1px solid #760001;
-    border-radius: 5px;
-    font-size: 1.2em;
-    text-align: center;
-    padding: 3px 8px 0px 8px;
-    color: white;
-    text-decoration: none;
+.social {
+	position: fixed; /* Hacemos que la posición en pantalla sea fija para que siempre se muestre en pantalla*/
+	left: 0; /* Establecemos la barra en la izquierda */
+	top: 230px; /* Bajamos la barra 200px de arriba a abajo */
+	z-index: 2000; /* Utilizamos la propiedad z-index para que no se superponga algún otro elemento como sliders, galerías, etc */
 }
+ 
+	.social ul {
+		list-style: none;
+	}
+ 
+	.social ul li a {
+		display: inline-block;
+		color:#fff;
+		background: #000;
+		padding: 10px 15px;
+		text-decoration: none;
+		-webkit-transition:all 500ms ease;
+		-o-transition:all 500ms ease;
+		transition:all 500ms ease; /* Establecemos una transición a todas las propiedades */
+	}
+ 
+	.social ul li .icon-facebook {background:#3b5998;} /* Establecemos los colores de cada red social, aprovechando su class */
+	.social ul li .icon-twitter {background: #00abf0;}
+	
+ 
+	.social ul li a:hover {
+		background: #ff0000; /* Cambiamos el fondo cuando el usuario pase el mouse */
+		
+	}
+	
+.social1 {
+	position: fixed; /* Hacemos que la posición en pantalla sea fija para que siempre se muestre en pantalla*/
+	right: 0; /* Establecemos la barra en la derecha */
+	top: 230px; /* Bajamos la barra 200px de arriba a abajo */
+	z-index: 2000; /* Utilizamos la propiedad z-index para que no se superponga algún otro elemento como sliders, galerías, etc */
+}
+ 
+	.social1 ul {
+		list-style: none;
+	}
+ 
+	.social1 ul li a {
+		display: inline-block;
+		color:#fff;
+		background: #000;
+		padding: 10px 15px;
+		margin: 0 40px;
+		text-decoration: none;
+		-webkit-transition:all 500ms ease;
+		-o-transition:all 500ms ease;
+		transition:all 500ms ease; /* Establecemos una transición a todas las propiedades */
+	}
+ 
+	.social1 ul li .icon-facebook {background:#3b5998;} /* Establecemos los colores de cada red social, aprovechando su class */
+	.social1 ul li .icon-twitter {background: #00abf0;}
+	
+ 
+	.social1 ul li a:hover {
+		background-color: green; /* Cambiamos el fondo cuando el usuario pase el mouse */
+		
+	}
 
-.red_button img
-{
-    border: 0;
-}
+
 
 /* Cuerpo */
 
@@ -174,15 +217,18 @@ article
     margin-right: 15px;
 }
 
-.cat_icon
-{
-    vertical-align: middle;
-    margin-right: 8px;
-}
+
 
 article p
 {
-    font-size: 0.8em;
+    font-size: 1em;
+}
+
+iframe{
+	border: 0;
+	overflow: hidden;
+	
+	
 }
 
 aside
@@ -195,87 +241,4 @@ aside
     padding: 10px;
     color: white;
     font-size: 0.9em;
-}
-
-#arrow
-{
-    position: absolute;
-    top: 100px;
-    left: -12px;
-}
-
-#zozor_picture
-{
-    text-align: center;
-}
-
-#zozor_picture img
-{
-    border: 1px solid #181818;
-}
-
-aside img
-{
-    margin-right: 5px;
-}
-
-/* Pie de página */
-
-footer
-{
-    background:  url('images/top.png') no-repeat top center, url('images/line.png') repeat-x top, url('images/shadow.png') repeat-x top;
-    padding-top: 25px;
-}
-
-footer p, footer ul
-{
-    font-size: 0.8em;
-}
-
-footer h1
-{
-    font-size: 1.1em;
-}
-
-#tweet, #my_pictures, #my_friends
-{
-    display: inline-block;
-    vertical-align: top;
-}
-
-#tweet
-{
-    width: 28%;
-}
-
-#my_pictures
-{
-    width: 35%;
-}
-
-#my_friends
-{
-    width: 31%;
-}
-
-#my_pictures img
-{
-    border: 1px solid #181818;
-    margin-right: 2px;
-}
-
-#my_friends ul
-{
-    display: inline-block;
-    vertical-align: top;
-    margin-top: 0;
-    width: 48%;
-    list-style-image: url('images/external_link.png');
-    padding-left: 2px;
-}
-
-#my_friends a
-{
-    text-decoration: none;
-    color: #760001;
 }
